<resources>
    <string name="app_name">ImplicitIntent</string>
    <string name="Titulo">Intent implicito</string>
    <string name="Titulo2">Intent explicito</string>
    <string name="Texto">Mi primer intent</string>
    <string name="Boton">Vamonos de aqui</string>
    <string name="TextoExplicito">Vamos a hacer un intent explicito</string>
    <string name="BotonExplicito">Vamonos a otra activity</string>


    <!--Segundo Activity-->
    <string name="Texto2">Estas en tu segundo activity tras el intent</string>
    <string name="Boton3">Click para abrir la web</string>
    <string name="Boton2">Vamonos al fragment para ver la web</string>
</resources>